--- a/course-online-common/pom.xml
+++ b/course-online-common/pom.xml
@@ -13,6 +13,12 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
         <!-- 定义swagger核心注解插件依赖 -->
         <dependency>
             <groupId>io.swagger</groupId>
