feat: 代码编辑器功能添加  - 实现根据数据库表转换成dto对象

--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>generator</artifactId>
 
     <dependencies>
+        <!--mysql-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
         <!--mybatis-plus-->
         <dependency>
             <groupId>com.baomidou</groupId>
