--- a/course-online-ui/course-online-ui-admin/package.json
+++ b/course-online-ui/course-online-ui-admin/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
     "vue": "^2.6.12",
+    "vue-froala-wysiwyg": "^3.2.5-1",
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
