--- a/course-online-gateway/src/main/resources/application.yml
+++ b/course-online-gateway/src/main/resources/application.yml
@@ -27,6 +27,16 @@ spring:
           # 路由重写
           filters:
             - RewritePath=/api/service(?<segment>/?.*),$\{segment}
+        # 设置路由id
+        - id: course-online-file
+          # 设置路由uri lb://nacos中注册的服务名
+          uri: lb://${spring.cloud.gateway.routes[1].id}
+          # 断言 路由规则
+          predicates:
+            - Path=/api/file/**
+          # 路由重写
+          filters:
+            - RewritePath=/api/file(?<segment>/?.*),$\{segment}
 
 logging:
   level:
