feat: oss分片上传初探

--- a/course-online-file/pom.xml
+++ b/course-online-file/pom.xml
@@ -13,6 +13,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.halayang</groupId>
             <artifactId>halayang-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
