--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,22 @@
         <easyexcel.version>2.1.6</easyexcel.version>
         <bcrypt.version>0.9.0</bcrypt.version>
         <pagehelper.version>1.2.10</pagehelper.version>
+        <aliyun-sdk.version>3.10.2</aliyun-sdk.version>
+        <commons-fileupload.version>1.3.1</commons-fileupload.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>${commons-fileupload.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>${aliyun-sdk.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
