feat: 分片上传组件,前端获取md5有点慢

--- a/course-online-core/pom.xml
+++ b/course-online-core/pom.xml
@@ -22,6 +22,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <!-- Spring Cloud OpenFeign的Starter的依赖 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <!--nacos服务注册-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
