--- a/course-online-file/pom.xml
+++ b/course-online-file/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>course-online-file</artifactId>
 
     <dependencies>
+        <!-- Spring Cloud OpenFeign的Starter的依赖 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.aliyun.oss</groupId>
             <artifactId>aliyun-sdk-oss</artifactId>
