--- a/course-online-file/src/main/resources/application.yml
+++ b/course-online-file/src/main/resources/application.yml
@@ -49,6 +49,19 @@ pagehelper:
   params: count=countSql
   reasonable: true
   support-methods-arguments: true
+# Feign 配置
+feign:
+  compression:
+    request:
+      # 开启请求压缩
+      enabled: true
+      # 配置压缩的 MIME TYPE
+      mime-types: text/xml,application/xml,application/json
+      # 配置压缩数据大小的下限
+      min-request-size: 128
+    response:
+      # 开启响应压缩
+      enabled: true
 
 logging:
   level:
