--- a/course-online-ui/course-online-ui-admin/package.json
+++ b/course-online-ui/course-online-ui-admin/package.json
@@ -10,12 +10,13 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "browser-md5-file": "^1.1.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
     "vue": "^2.6.12",
     "vue-froala-wysiwyg": "^3.2.5-1",
     "vue-router": "^3.4.9",
-    "vue-simple-uploader": "^0.7.6"
+    "vue-uuid": "^2.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
