--- a/course-online-ui/course-online-ui-admin/package.json
+++ b/course-online-ui/course-online-ui-admin/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.6.12",
     "vue-froala-wysiwyg": "^3.2.5-1",
     "vue-router": "^3.4.9",
-    "vue-uuid": "^2.0.2"
+    "vue-uuid": "^2.0.2",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
