fix: 分片上传组件优化

--- a/course-online-file/src/main/resources/application.yml
+++ b/course-online-file/src/main/resources/application.yml
@@ -58,7 +58,7 @@ feign:
       # 配置压缩的 MIME TYPE
       mime-types: text/xml,application/xml,application/json
       # 配置压缩数据大小的下限
-      min-request-size: 128
+      min-request-size: 1024
     response:
       # 开启响应压缩
       enabled: true
@@ -69,6 +69,7 @@ logging:
   file:
     path: ./logs/${spring.application.name}/${spring.application.name}.log
 
+# 文件本地映射的配置
 file:
   upload:
     # 文件保存到磁盘的地址
