--- a/course-online-ui/course-online-ui-admin/package.json
+++ b/course-online-ui/course-online-ui-admin/package.json
@@ -10,12 +10,17 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
-    "browser-md5-file": "^1.1.1",
     "core-js": "^3.6.5",
+    "css-loader": "^5.0.1",
     "element-ui": "^2.14.1",
-    "spark-md5": "^3.0.1",
+    "file-loader": "^6.2.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "less": "^4.1.0",
+    "less-loader": "^7.3.0",
+    "style-loader": "^2.0.0",
     "vue": "^2.6.12",
-    "vue-froala-wysiwyg": "^3.2.5-1",
+    "vue-froala-wysiwyg": "^3.2.1",
     "vue-router": "^3.4.9",
     "vue-uuid": "^2.0.2",
     "vue-video-player": "^5.0.2"
