--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,43 @@
         <easyexcel.version>2.1.6</easyexcel.version>
         <bcrypt.version>0.9.0</bcrypt.version>
         <pagehelper.version>1.2.10</pagehelper.version>
-        <aliyun-sdk.version>3.10.2</aliyun-sdk.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
+        <!-- 阿里云-->
+        <aliyun-sdk-oss.version>3.10.2</aliyun-sdk-oss.version>
+        <aliyun-sdk-core.version>4.5.1</aliyun-sdk-core.version>
+        <aliyun-sdk-vod.version>2.15.12</aliyun-sdk-vod.version>
+        <fastjson.version>1.2.28</fastjson.version>
+        <gson.version>2.8.2</gson.version>
+        <json.version>20170516</json.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-core</artifactId>
+                <version>${aliyun-sdk-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-vod</artifactId>
+                <version>${aliyun-sdk-vod.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${json.version}</version>
+            </dependency>
             <dependency>
                 <groupId>commons-fileupload</groupId>
                 <artifactId>commons-fileupload</artifactId>
@@ -55,7 +86,7 @@
             <dependency>
                 <groupId>com.aliyun.oss</groupId>
                 <artifactId>aliyun-sdk-oss</artifactId>
-                <version>${aliyun-sdk.version}</version>
+                <version>${aliyun-sdk-oss.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
