--- a/course-online-ui/course-online-ui-admin/package.json
+++ b/course-online-ui/course-online-ui-admin/package.json
@@ -16,6 +16,7 @@
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "less": "^4.1.0",
     "less-loader": "^7.3.0",
     "style-loader": "^2.0.0",
