feat: 权限管理前后端交互

--- a/course-online-core/pom.xml
+++ b/course-online-core/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>halayang-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
         <!-- AOP -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
