--- a/course-online-file/pom.xml
+++ b/course-online-file/pom.xml
@@ -17,6 +17,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
         <!--阿里云所需依赖-->
         <dependency>
             <groupId>com.aliyun</groupId>
