--- a/course-online-core/pom.xml
+++ b/course-online-core/pom.xml
@@ -31,6 +31,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <!-- 集成feign httpclient依赖 -->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-httpclient</artifactId>
+        </dependency>
         <!--nacos服务注册-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
