--- a/course-online-core/pom.xml
+++ b/course-online-core/pom.xml
@@ -26,6 +26,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <!--加入sentinel-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!-- Spring Cloud OpenFeign的Starter的依赖 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
