fix: 前后端优化

--- a/course-online-auth/pom.xml
+++ b/course-online-auth/pom.xml
@@ -113,6 +113,16 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.swagger</groupId>
+                    <artifactId>swagger-models</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-models</artifactId>
         </dependency>
         <!-- 定义swagger核心注解插件依赖 -->
         <dependency>
