--- a/course-online-gateway/src/main/resources/application.yml
+++ b/course-online-gateway/src/main/resources/application.yml
@@ -47,6 +47,15 @@ spring:
           # 路由重写
           filters:
             - RewritePath=/api/auth(?<segment>/?.*),$\{segment}
+        - id: course-online-front
+          # 设置路由uri lb://nacos中注册的服务名
+          uri: lb://${spring.cloud.gateway.routes[3].id}
+          # 断言 路由规则
+          predicates:
+            - Path=/api/front/**
+          # 路由重写
+          filters:
+            - RewritePath=/api/front(?<segment>/?.*),$\{segment}
 
 logging:
   level:
