feat: 前台数据展示前后端

--- a/course-online-front/pom.xml
+++ b/course-online-front/pom.xml
@@ -13,6 +13,21 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.halayang</groupId>
             <artifactId>halayang-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
