--- a/course-online-ui/website/package.json
+++ b/course-online-ui/website/package.json
@@ -9,16 +9,17 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "element-ui": "^2.15.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "core-js": "^3.6.5",
     "css-loader": "^5.0.1",
+    "element-ui": "^2.15.1",
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "js-cookie": "^2.2.1",
     "less": "^4.1.0",
     "less-loader": "^7.3.0",
     "style-loader": "^2.0.0",
-    "js-cookie": "^2.2.1",
     "vue": "^2.6.11",
     "vue-froala-wysiwyg": "^3.2.1",
     "vue-router": "^3.4.9"
