fix: 配置文件优化

--- a/course-online-file/src/main/resources/application.yml
+++ b/course-online-file/src/main/resources/application.yml
@@ -99,5 +99,5 @@ file:
   upload:
     # 文件保存到磁盘的地址
     path: D:/file/
-    # 用于页面展示的地址父路径 网关代理的路径 show是自定义的映射路径 最后一定要加/
+    # 用于页面展示的地址父路径 网关代理的路径 show是自定义的映射路径
     show: http://${GATEWAY_SERVER:127.0.0.1}:${GATEWAY_PORT:9000}/api/file/show/
