--- a/course-online-front/src/main/resources/bootstrap.yml
+++ b/course-online-front/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     nacos:
       discovery:
         # nacos地址
-        server-addr: 127.0.0.1:8848
+        server-addr: ${NACOS_SERVER:127.0.0.1}:${NACOS_PORT:8848}
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         # config 多配置文件
