--- a/course-online-gateway/src/main/resources/application.yml
+++ b/course-online-gateway/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     nacos:
       discovery:
         # nacos地址
-        server-addr: 127.0.0.1:8848
+        server-addr: ${NACOS_SERVER:127.0.0.1}:${NACOS_PORT:8848}
     # 开启gateway服务发现路由
     gateway:
       discovery:
